--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "cypress": "^12.7.0",
     "cypress-mochawesome-reporter": "^3.3.0"
+  },
+  "dependencies": {
+    "cypress-xpath": "^2.0.1"
   }
 }
