--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^12.7.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-mochawesome-reporter": "^3.3.0"
   },
   "dependencies": {
